--- a/LessonsProject/app/src/main/res/values/colors.xml
+++ b/LessonsProject/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="transparent">#00FFFFFF</color>
+    <color name="white_light_transparent">#99FFFFFF</color>
+    <color name="sub_blue">#1F90E9</color>
+    <color name="white">#FFFFFF</color>
 </resources>
