--- a/LessonsProject/app/src/main/res/values/colors.xml
+++ b/LessonsProject/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="white_light_transparent">#99FFFFFF</color>
     <color name="sub_blue">#1F90E9</color>
     <color name="white">#FFFFFF</color>
+
+    <!--  Math calculation  -->
+
+    <color name="bg_number_btn">#12264C</color>
+    <color name="bg_other_btn_action">#3A4B69</color>
+    <color name="bg_math_btn">#0B1C3D</color>
 </resources>
