--- a/LessonsProject/app/src/main/res/layout/fragment_math_calculation.xml
+++ b/LessonsProject/app/src/main/res/layout/fragment_math_calculation.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="220dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -19,7 +19,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/calcView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="3dp"
@@ -47,7 +47,7 @@
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button"
+                android:id="@+id/cleanBtn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="AC"
@@ -59,7 +59,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button2"
+                android:id="@+id/changeBtn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="+/-"
@@ -71,7 +71,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button3"
+                android:id="@+id/modBtn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="%"
@@ -83,7 +83,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button4"
+                android:id="@+id/divisionBtn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="÷"
@@ -102,7 +102,7 @@
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button5"
+                android:id="@+id/button7"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="7"
@@ -114,7 +114,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button6"
+                android:id="@+id/button8"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="8"
@@ -126,7 +126,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button7"
+                android:id="@+id/button9"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="9"
@@ -138,7 +138,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button8"
+                android:id="@+id/multiplyBtn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="x"
@@ -157,7 +157,7 @@
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button9"
+                android:id="@+id/button4"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="4"
@@ -169,7 +169,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button10"
+                android:id="@+id/button5"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="5"
@@ -181,7 +181,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button11"
+                android:id="@+id/button6"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="6"
@@ -193,7 +193,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button12"
+                android:id="@+id/minusBtn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="–"
@@ -212,7 +212,7 @@
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button13"
+                android:id="@+id/button1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="1"
@@ -224,7 +224,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button14"
+                android:id="@+id/button2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="2"
@@ -236,7 +236,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button15"
+                android:id="@+id/button3"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="3"
@@ -248,7 +248,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button16"
+                android:id="@+id/plusBtn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="+"
@@ -267,7 +267,7 @@
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button17"
+                android:id="@+id/button0"
                 android:layout_width="103dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -277,7 +277,7 @@
                 android:text="0" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button19"
+                android:id="@+id/commaBtn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text=","
@@ -288,7 +288,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button20"
+                android:id="@+id/equallyBtn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="="
