--- a/LessonsProject/app/src/main/res/layout/fragment_calculation.xml
+++ b/LessonsProject/app/src/main/res/layout/fragment_calculation.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -41,6 +42,7 @@
             android:id="@+id/aParamEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAlignment="textEnd"
             android:textSize="20sp"
             android:inputType="numberSigned"/>
 
@@ -56,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberSigned"
+            android:textAlignment="textEnd"
             android:textSize="20sp"/>
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -69,6 +72,7 @@
             android:id="@+id/cParamEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAlignment="textEnd"
             android:inputType="numberSigned"
             android:textSize="20sp"/>
 
@@ -92,4 +96,18 @@
         android:textColor="@color/white"
         android:text="@string/calculation"
         android:background="@drawable/bg_buttons"/>
+
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/cleanBtn"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_buttons"
+        android:text="Очистить"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calcBtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
