--- a/LessonsProject/app/src/main/res/layout/fragment_hello.xml
+++ b/LessonsProject/app/src/main/res/layout/fragment_hello.xml
@@ -51,6 +51,17 @@ tools:context=".screens.main.MainActivity">
         android:tint="@color/white"
         android:src="@drawable/ic_quadratic"/>
 
+    <ImageButton
+        android:id="@+id/timelineBtn"
+        style="@style/Widget.AppCompat.ActionButton"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_gravity="start"
+        android:scaleType="centerCrop"
+        android:layout_marginEnd="15dp"
+        android:gravity="center_vertical"
+        android:tint="@color/white"
+        android:src="@drawable/ic_timelime"/>
 </Toolbar>
 
 
