add: passed plans

--- a/LessonsProject/app/src/main/res/layout/fragment_timeline.xml
+++ b/LessonsProject/app/src/main/res/layout/fragment_timeline.xml
@@ -38,6 +38,7 @@
     </Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/timelineRecycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
