--- a/LessonsProject/app/src/main/res/layout/item_timeline.xml
+++ b/LessonsProject/app/src/main/res/layout/item_timeline.xml
@@ -15,13 +15,15 @@
 
         <TextView
             android:id="@+id/titleTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="16dp"
             android:text="Продукты"
             android:textColor="@color/bg_math_btn"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/dateTextView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
