--- a/LessonsProject/app/src/main/res/layout/fragment_add_timeline.xml
+++ b/LessonsProject/app/src/main/res/layout/fragment_add_timeline.xml
@@ -129,7 +129,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/dateEditText" />
 
             <ImageButton
-                android:id="@+id/btnDelete"
+                android:id="@+id/btnClose"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_close_button"
