--- a/LessonsProject/app/src/main/res/layout/item_timeline.xml
+++ b/LessonsProject/app/src/main/res/layout/item_timeline.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cardContainer"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="6dp"
     app:cardCornerRadius="10dp"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_marginHorizontal="12dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
