add: auth fragment

--- a/LessonsProject/app/src/main/res/layout/fragment_math_calculation.xml
+++ b/LessonsProject/app/src/main/res/layout/fragment_math_calculation.xml
@@ -6,6 +6,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:elevation="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/HeaderBar">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:textColor="@color/white"
+            android:text="Калькулятор"
+            android:textSize="16sp" />
+    </Toolbar>
+
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="0dp"
