--- a/LessonsProject/app/src/main/res/values/colors.xml
+++ b/LessonsProject/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="white_light_transparent">#99FFFFFF</color>
     <color name="sub_blue">#1F90E9</color>
     <color name="white">#FFFFFF</color>
+    <color name="main_color">#4293F2</color>
 
     <!--  Math calculation  -->
 
@@ -20,4 +21,7 @@
     <color name="timeline_line_new">#D3D3D3</color>
     <color name="pass_time">#CD5C5C</color>
     <color name="done_time">#00FA9A</color>
+
+    <color name="color_white_22">#38FFFFFF</color>
+    <color name="color_white_60">#99FFFFFF</color>
 </resources>
